--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,75 +1,82 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Nearby Bluetooth Scanner</title>
+  <meta charset="UTF-8">
+  <title>BLE Scanner</title>
   <style>
     body {
-      font-family: sans-serif;
+      font-family: Arial, sans-serif;
       padding: 20px;
-      text-align: center;
+      background: #f0f9ff;
+    }
+    h2 {
+      color: #0077cc;
+    }
+    #output {
+      margin-top: 20px;
+      font-size: 16px;
+      line-height: 1.5;
+      background: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
     }
     button {
-      font-size: 18px;
-      padding: 10px 20px;
-      margin-top: 20px;
+      padding: 10px 15px;
+      font-size: 16px;
+      background-color: #0077cc;
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
     }
-    .log {
-      margin-top: 20px;
-      background: #f4f4f4;
-      padding: 10px;
-      font-family: monospace;
-      border-radius: 10px;
-      max-height: 300px;
-      overflow-y: auto;
+    button:hover {
+      background-color: #005fa3;
     }
   </style>
 </head>
 <body>
-  <h2>📡 Bluetooth Proximity Scanner</h2>
-  <button onclick="scan()">🔍 Start Scanning</button>
-  <div class="log" id="log">Waiting for scan...</div>
+
+  <h2>🔍 Bluetooth LE Device Scanner</h2>
+  <button onclick="startBLEScan()">🔄 Start Scanning</button>
+  <div id="output">Status: Not scanning</div>
 
   <script>
-    function rssiToPercent(rssi) {
-      // Normalize RSSI between -100 dBm (weak) to -30 dBm (strong)
-      const min = -100;
-      const max = -30;
-      let percent = Math.round(((rssi - min) / (max - min)) * 100);
-      return Math.min(100, Math.max(0, percent)); // Clamp between 0-100
-    }
-
-    async function scan() {
-      const log = document.getElementById('log');
-      log.innerHTML = '🔍 Scanning for Bluetooth devices...<br>';
-
-      if (!('bluetooth' in navigator) || !navigator.bluetooth.requestLEScan) {
-        log.innerHTML += '❌ Web Bluetooth Scanning is not supported in this browser.';
-        return;
-      }
-
+    async function startBLEScan() {
       try {
         const options = {
           acceptAllAdvertisements: true
         };
 
+        const output = document.getElementById('output');
+        output.innerHTML = "Requesting Bluetooth permissions...";
+
         const scan = await navigator.bluetooth.requestLEScan(options);
 
         navigator.bluetooth.addEventListener('advertisementreceived', event => {
-          const name = event.device.name || 'Unknown';
+          const name = event.device.name || 'Unnamed';
           const rssi = event.rssi;
-          const signalStrength = rssiToPercent(rssi);
+          const strength = getSignalStrengthPercent(rssi);
 
-          log.innerHTML = `
-            ✅ Device: ${name}<br>
-            🔢 RSSI: ${rssi} dBm<br>
-            📶 Strength: ${signalStrength}%<br>
-            🔁 Scanning for closest device...<br>
+          output.innerHTML = `
+            ✅ Device: <strong>${name}</strong><br>
+            🔢 RSSI: <strong>${rssi} dBm</strong><br>
+            📶 Signal Strength: <strong>${strength}%</strong>
           `;
         });
 
-      } catch (err) {
-        log.innerHTML += `❌ Error: ${err.message}`;
+        output.innerHTML = "🔎 Scanning... bring device close.";
+      } catch (error) {
+        document.getElementById('output').innerHTML =
+          `❌ Error: ${error.message || error}`;
       }
+    }
+
+    function getSignalStrengthPercent(rssi) {
+      const maxRSSI = -40;
+      const minRSSI = -100;
+      const percent = Math.min(100, Math.max(0, ((rssi - minRSSI) / (maxRSSI - minRSSI)) * 100));
+      return percent.toFixed(1);
     }
   </script>
 </body>
