--- a/Untitled-1.html
+++ b/Untitled-1.html
@@ -1,82 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>BLE Scanner</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Bluetooth Device Scanner</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      padding: 20px;
-      background: #f0f9ff;
-    }
-    h2 {
-      color: #0077cc;
-    }
-    #output {
-      margin-top: 20px;
-      font-size: 16px;
-      line-height: 1.5;
-      background: #fff;
-      padding: 15px;
-      border-radius: 10px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      background: #f4f4f4;
+      text-align: center;
+      padding: 50px;
     }
     button {
-      padding: 10px 15px;
-      font-size: 16px;
-      background-color: #0077cc;
-      color: white;
+      padding: 15px 30px;
+      font-size: 18px;
       border: none;
-      border-radius: 5px;
+      background-color: #007bff;
+      color: white;
+      border-radius: 8px;
       cursor: pointer;
     }
     button:hover {
-      background-color: #005fa3;
+      background-color: #0056b3;
+    }
+    #devices {
+      margin-top: 30px;
+      text-align: left;
+      display: inline-block;
     }
   </style>
 </head>
 <body>
-
-  <h2>🔍 Bluetooth LE Device Scanner</h2>
-  <button onclick="startBLEScan()">🔄 Start Scanning</button>
-  <div id="output">Status: Not scanning</div>
+  <h1>Nearby Bluetooth Scanner</h1>
+  <p>Click the button to search for nearby Bluetooth devices</p>
+  <button onclick="scanBluetooth()">Scan for Devices</button>
+  <div id="devices"></div>
 
   <script>
-    async function startBLEScan() {
+    async function scanBluetooth() {
       try {
-        const options = {
-          acceptAllAdvertisements: true
-        };
-
-        const output = document.getElementById('output');
-        output.innerHTML = "Requesting Bluetooth permissions...";
-
-        const scan = await navigator.bluetooth.requestLEScan(options);
-
-        navigator.bluetooth.addEventListener('advertisementreceived', event => {
-          const name = event.device.name || 'Unnamed';
-          const rssi = event.rssi;
-          const strength = getSignalStrengthPercent(rssi);
-
-          output.innerHTML = `
-            ✅ Device: <strong>${name}</strong><br>
-            🔢 RSSI: <strong>${rssi} dBm</strong><br>
-            📶 Signal Strength: <strong>${strength}%</strong>
-          `;
+        const device = await navigator.bluetooth.requestDevice({
+          acceptAllDevices: true
         });
 
-        output.innerHTML = "🔎 Scanning... bring device close.";
+        const output = document.getElementById("devices");
+        output.innerHTML = `<h3>Device Found:</h3>
+          <p><strong>Name:</strong> ${device.name || 'Unknown'}</p>
+          <p><strong>ID:</strong> ${device.id}</p>`;
       } catch (error) {
-        document.getElementById('output').innerHTML =
-          `❌ Error: ${error.message || error}`;
+        alert("Error: " + error.message);
       }
-    }
-
-    function getSignalStrengthPercent(rssi) {
-      const maxRSSI = -40;
-      const minRSSI = -100;
-      const percent = Math.min(100, Math.max(0, ((rssi - minRSSI) / (maxRSSI - minRSSI)) * 100));
-      return percent.toFixed(1);
     }
   </script>
 </body>
